--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <!-- <link rel="shortcut icon" href="https://icon-library.com/images/home-search-icon/home-search-icon-18.jpg" /> -->
-  <link rel="shortcut icon" href="https://imgur.com/a/SqRooHB" />
+  <link rel="shortcut icon" href="https://icon-library.com/images/home-search-icon/home-search-icon-18.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
